@@ -15,7 +15,7 @@ class phpvbAuthActiveDirectory implements phpvbAuth {
 		'admin_group' => null,
 		'admin_user' => null,
 		'user_group' => null,
-		'bind_dn' => 'CN=Users',
+		'container' => 'CN=Users',
 		'domain' =>   'internal.local',
 		'filter' => '(&(objectclass=User)(objectCategory=Person))'
 	);
@@ -62,24 +62,28 @@ class phpvbAuthActiveDirectory implements phpvbAuth {
 
 			} else if(strtolower(substr(PHP_OS, 0, 5)) == 'Linux') {
 
-				$ex .= ' You probably need to install the php5-ldap (or similar depending on your distribution) package.';
+				$ex .= ' You probably need to install the php5-ldap (or similar depending on your distribution) package and restart your web server.';
 					
 			}
 			throw new Exception($ex);
 		}
 
+		$_SESSION['valid'] = false;
+
 		// Connect to server
-		if(!($auth = ldap_connect($this->config['host'])))
-			return false;
+		if(!($auth = ldap_connect($this->config['host']))) {
+			throw new Exception('Active Directory error ('.ldap_errno($auth).') ' . ldap_error($auth));
+		}
 
 		// Set relevant LDAP options
 		ldap_set_option($auth,LDAP_OPT_PROTOCOL_VERSION, 3);
 		
-		$_SESSION = array();
 
 		// Main login /bind
-		if(!($bind = @ldap_bind($auth, $username . "@" .$this->config['domain'], $password)))
-			return false;
+		if(!($bind = @ldap_bind($auth, $username . "@" .$this->config['domain'], $password))) {
+			if(ldap_errno($auth) == 49) return false;
+			throw new Exception('Active Directory error ('.ldap_errno($auth).') ' . ldap_error($auth));
+		}
 		
 		
 		// Get user information from AD
@@ -94,52 +98,60 @@ class phpvbAuthActiveDirectory implements phpvbAuth {
 		}
 		
 		$result = @ldap_search($auth,
-				$this->config['bind_dn'] . ',DC=' . join(',DC=', explode('.', $this->config['domain'])),
+				$this->config['container'] . ',DC=' . join(',DC=', explode('.', $this->config['domain'])),
 				$filter, array("memberof","useraccountcontrol"));
 
 		if(!result) throw new Exception ("Unable to search Active Directory server: " . ldap_error($auth));
-		list($entries) = @ldap_get_entries($auth, $result);
+		@list($entries) = @ldap_get_entries($auth, $result);
 		@ldap_unbind($auth);
+		if(!$entries) {
+			throw new Exception("Permission denied");
+		}
 		
 		
 		// Check for disabled user
-		if((intval($entries['useraccountcontrol'][0]) & 2))
-			return false;
-
-		// check for valid user group
-		if($this->config['user_group']) {
-			foreach($entries['memberof'] as $group) {
-				list($group) = explode(',', $group);
-				list($null,$group) = explode('=', $group);
-				if(strtolower($group) == strtolower($this->config['user_group'])) {
-					$_SESSION['valid'] = true;
-					break;
-				}
-			}
-			if(!$_SESSION['valid']) return false;
-		} else {
-			$_SESSION['valid'] = true;
+		if((intval($entries['useraccountcontrol'][0]) & 2)) {
+			throw new Exception('This account is disabled in Active Directory.');
 		}
-		
-		// user has permission. establish session variables
-		$_SESSION['user'] = $username;
-		$_SESSION['authCheckHeartbeat'] = time();
 
-		// check for valid user group
+		// check for valid admin group
 		if($this->config['admin_group']) {
 			foreach($entries['memberof'] as $group) {
 				list($group) = explode(',', $group);
-				list($null,$group) = explode('=', $group);
-				if(strtolower($group) == strtolower($this->config['admin_group'])) {
-					$_SESSION['admin'] = true;
+				if(strtolower($group) == strtolower('cn='.$this->config['admin_group'])) {
+					$_SESSION['admin'] = $_SESSION['valid'] = true;
 					break;
 				}
 			}
 		}
 		
 		// Admin user explicitly set?
-		if(!$_SESSION['admin'] && $this->config['admin_user'])
+		if(!$_SESSION['admin'] && $this->config['admin_user']) {
 			$_SESSION['admin'] = (strtolower($this->config['admin_user']) == strtolower($_SESSION['user']));
+			// Admin is ok
+			$_SESSION['valid'] = ($_SESSION['admin'] || $_SESSION['valid']);
+		}
+
+		// check for valid user group
+		if($this->config['user_group'] && !$_SESSION['valid']) {
+			foreach($entries['memberof'] as $group) {
+				list($group) = explode(',', $group);
+				if(strtolower($group) == strtolower('cn='.$this->config['user_group'])) {
+					$_SESSION['valid'] = true;
+					break;
+				}
+			}
+		} else {
+			$_SESSION['valid'] = true;
+		}
+		
+		if(!$_SESSION['valid'])
+			throw new Exception("Permission denied");
+
+		// user has permission. establish session variables
+		$_SESSION['user'] = $username;
+		$_SESSION['authCheckHeartbeat'] = time();
+
 		
 		return true;
 		
